Lab16_kubernetes_network/manifests/deploy-ubuntu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
        - name: ubuntu-container
          image: ubuntu:latest
          command:
            - /bin/bash
            - -c
            - |
              apt-get update && apt-get install -y iputils-ping curl && sleep 3600
