Lab16_kubernetes_network/manifests/hello-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app-container
          image: cielciel/hello-app:1.0
          ports:
            - containerPort: 80
