Lab16_kubernetes_network/manifests/world-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: world-app
  template:
    metadata:
      labels:
        app: world-app
    spec:
      containers:
        - name: world-app-container
          image: cielciel/world-app:1.0
          ports:
            - containerPort: 80
