Lab16_kubernetes_network/manifests/hello-cip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
    - name: tcp
      port: 8020
      targetPort: 80
