Lab16_kubernetes_network/manifests/my-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: world-svc
spec:
  type: ClusterIP
  selector:
    app: world-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
