Lab16_kubernetes_network/manifests/world-cip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: world-svc
spec:
  type: ClusterIP
  selector:
    app: world-app
  ports:
    - protocol: TCP
      port: 8050
      targetPort: 80
