Lab16_kubernetes_network/manifests/world-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: world-svc
spec:
  type: LoadBalancer
  selector:
    app: world-app
  ports:
    - protocol: TCP
      port: 8050
      targetPort: 80
