Lab16_kubernetes_network/manifests/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-svc
                port:
                  number: 80
          - path: /world
            pathType: Prefix
            backend:
              service:
                name: world-svc
                port:
                  number: 80
